--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "enc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "author": "Nasyx Rakeeb",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
